Fix game list style on mobile

--- a/src/components/Menu/PlayerGames/PlayerGames.module.scss
+++ b/src/components/Menu/PlayerGames/PlayerGames.module.scss
@@ -2,42 +2,43 @@
 
 .playerGames {
   border-top: 5px solid black;
-  display: flex;
-  justify-content: center;
   margin: 0 auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   padding: 25px 0;
   width: 95%;
 
-  .game {
-    @include fadeInAnimation();
-
-    background: $gray-50;
-    border: 2px solid black;
+  .gameContainer {
     display: flex;
-    flex-direction: column;
-    font-size: 1.5em;
-    height: 175px;
-    justify-content: space-evenly;
-    margin: 0 10px;
-    padding: 10px;
-    text-align: center;
-    width: 150px;
 
-    &.gameOver {
-      background: $gray-65;
-      opacity: 0.9;
-    }
+    .game {
+      @include fadeInAnimation();
 
-    .gameType {
+      background: $gray-50;
+      border: 2px solid black;
+      display: flex;
+      flex: 1 1 150px;
+      flex-direction: column;
+      font-size: 1.5em;
+      height: 175px;
+      justify-content: space-evenly;
+      margin: 0 10px;
+      padding: 10px 35px;
+      text-align: center;
 
-    }
+      &.gameOver {
+        background: $gray-65;
+        opacity: 0.9;
+      }
 
-    .gameScore {
-      font-size: 0.8em;
-    }
+      .gameType {}
 
-    .playButton {
+      .gameScore {
+        font-size: 0.8em;
+      }
 
+      .playButton {}
     }
   }
+
 }
